examples/invalid/leading_underscore_number.jasn
// Leading underscores in numbers are forbidden (after sign/prefix)
{
  bad_number: _1000
}
